Envio de correos terminado

--- a/.env.example
+++ b/.env.example
@@ -35,15 +35,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS=no-reply@example.com
+MAIL_MAILER=smtp
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=hello@demomailtrap.co
 MAIL_FROM_NAME="Naranti"
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_APP_URL=http://127.0.0.1:5173
+
+QUEUE_CONNECTION=database
 
 SANCTUM_STATEFUL_DOMAINS=localhost:5173,127.0.0.1:5173
